added assets and page basic structure

--- a/index.html
+++ b/index.html
@@ -3,7 +3,56 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <script src="tailwind.config.js"></script>
     <title>Portfolio - Abdul</title>
   </head>
-  <body></body>
+  <body>
+    <div class="fixed top-0 right-0 w-11/12 -z-10 translate-y-[-80%]">
+      <img
+        src="asset/header-bg-color.png"
+        alt="hdeader background color"
+        class="w-full"
+      />
+    </div>
+    <nav
+      class="w-full fixed px-5 lg:px-8 xl:px-[8%] py-4 flex items-center justify-between z-50"
+    >
+      <img src="asset/logo.png" alt="logo" class="w-28 cursor-pointer mr-14" />
+      <ul
+        class="hidden md:flex items-center gap-6 lg:gap-8 rounded-full px-12 py-3 bg-white shadow-sm bg-opacity-15"
+      >
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About me</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#work">My Work</a></li>
+        <li><a href="#contact">Contact me</a></li>
+      </ul>
+
+      <div class="flex items-center gap-4">
+        <button><img src="asset/moon_icon.png" alt="" class="w-6" /></button>
+        <a
+          href="#contact"
+          class="hidden lg:flex items-center gap-3 px-10 py-2.5 border border-gray-500 rounded-full ml-4"
+        >
+          Contact
+          <img src="asset/arrow-icon.png" alt="icon for arrow" class="w-3"
+        /></a>
+        <button class="block md:hidden ml-3">
+          <img src="asset/menu-black.png" alt="" class="w-6" />
+        </button>
+      </div>
+
+      <ul
+        id="sideMenu"
+        class="flex md:hidden flex-col gap-4 py-20 px-10 fixed right-0 top-0 bottom-0 w-64 z-50 h-screen bg-rose-50 transition duration-500"
+      >
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About me</a></li>
+        <li><a href="#services">Services</a></li>
+        <li><a href="#work">My Work</a></li>
+        <li><a href="#contact">Contact me</a></li>
+      </ul>
+    </nav>
+  </body>
 </html>
